[package]
name = "snark_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2"
rand = "0.4"

# TODO: change to use matter-labs when everything is merged:
# rescue_poseidon = {git = "https://github.com/matter-labs/rescue-poseidon.git", branch = "poseidon2"}
rescue_poseidon = {git = "https://github.com/distributed-lab/rescue-poseidon", branch = "feature/ec-and-modexp-precompiles"}
# rescue_poseidon = {path = "../rescue-poseidon"}
